--- a/imgui.ini
+++ b/imgui.ini
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=0,720
-Size=481,281
+Size=393,281
 Collapsed=0
 DockId=0x00000007,0
 
@@ -70,8 +70,8 @@ Size=607,921
 Collapsed=0
 
 [Window][Inspector]
-Pos=1452,19
-Size=468,982
+Pos=1437,19
+Size=483,982
 Collapsed=0
 DockId=0x00000005,0
 
@@ -82,9 +82,9 @@ Collapsed=1
 
 [Window][Settings]
 Pos=0,19
-Size=481,699
+Size=393,699
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x0000000B,0
 
 [Window][Debug Settings]
 Pos=784,39
@@ -92,14 +92,14 @@ Size=236,213
 Collapsed=0
 
 [Window][Profiler]
-Pos=483,702
-Size=967,299
+Pos=395,719
+Size=1040,282
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Scene]
-Pos=483,19
-Size=967,681
+Pos=395,19
+Size=1040,698
 Collapsed=0
 DockId=0x00000008,0
 
@@ -118,6 +118,12 @@ Pos=0,19
 Size=514,399
 Collapsed=0
 DockId=0x00000006,0
+
+[Window][Hz]
+Pos=0,483
+Size=481,235
+Collapsed=0
+DockId=0x0000000D,0
 
 [Table][0xBF3CBA1D,3]
 Column 0  Width=0
@@ -192,14 +198,16 @@ Column 1  Width=0
 
 [Docking][Data]
 DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,19 Size=1920,982 Split=X
-  DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=481,982 Split=Y Selected=0x1C33C293
-    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=486,699 Selected=0x1C33C293
+  DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=393,982 Split=Y Selected=0x1C33C293
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=486,699 Split=Y Selected=0x1C33C293
+      DockNode  ID=0x0000000B Parent=0x00000003 SizeRef=481,462 Selected=0x1C33C293
+      DockNode  ID=0x0000000D Parent=0x00000003 SizeRef=481,235 Selected=0xC9A94FD0
     DockNode    ID=0x00000009 Parent=0x00000001 SizeRef=486,281 Split=Y Selected=0x0541D7F0
       DockNode  ID=0x00000006 Parent=0x00000009 SizeRef=368,250 Selected=0x0541D7F0
       DockNode  ID=0x00000007 Parent=0x00000009 SizeRef=368,288 Selected=0xE927CF2F
-  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=1437,982 Split=X
-    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=967,963 Split=Y Selected=0x18B8C0DE
-      DockNode  ID=0x00000008 Parent=0x00000004 SizeRef=953,681 CentralNode=1 Selected=0x18B8C0DE
-      DockNode  ID=0x0000000A Parent=0x00000004 SizeRef=953,299 Selected=0x0541D7F0
-    DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=468,963 Selected=0xF02CD328
+  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=1525,982 Split=X
+    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=1040,963 Split=Y Selected=0x18B8C0DE
+      DockNode  ID=0x00000008 Parent=0x00000004 SizeRef=953,698 CentralNode=1 Selected=0x18B8C0DE
+      DockNode  ID=0x0000000A Parent=0x00000004 SizeRef=953,282 Selected=0x0541D7F0
+    DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=483,963 Selected=0xF02CD328
 
