--- a/DeferredGraphics/DeferredGraphics.vcxproj
+++ b/DeferredGraphics/DeferredGraphics.vcxproj
@@ -154,10 +154,12 @@
     <ClCompile Include="AABB.cpp" />
     <ClCompile Include="Behavior.cpp" />
     <ClCompile Include="BezierFollowBehavior.cpp" />
+    <ClCompile Include="Bone.cpp" />
     <ClCompile Include="BoundingSphere.cpp" />
     <ClCompile Include="BoundingVolumeHierarchy.cpp" />
     <ClCompile Include="BSP.cpp" />
     <ClCompile Include="CameraPossessBehavior.cpp" />
+    <ClCompile Include="ClothBehavior.cpp" />
     <ClCompile Include="ColliderComponent.h" />
     <ClCompile Include="DebugRenderingSystem.cpp" />
     <ClCompile Include="Editor.cpp" />
@@ -169,7 +171,9 @@
     <ClCompile Include="External\Imgui\imgui_impl_opengl3.cpp" />
     <ClCompile Include="External\Imgui\imgui_widgets.cpp" />
     <ClCompile Include="Input.cpp" />
+    <ClCompile Include="InverseKinematicsBehavior.cpp" />
     <ClCompile Include="JsonParser.cpp" />
+    <ClCompile Include="Line.cpp" />
     <ClCompile Include="LinearAllocator.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Material.cpp" />
@@ -191,10 +195,12 @@
     <ClInclude Include="Behavior.h" />
     <ClInclude Include="Bezier.h" />
     <ClInclude Include="BezierFollowBehavior.h" />
+    <ClInclude Include="Bone.h" />
     <ClInclude Include="BoundingSphere.h" />
     <ClInclude Include="BoundingVolumeHierarchy.h" />
     <ClInclude Include="BSP.h" />
     <ClInclude Include="CameraPossessBehavior.h" />
+    <ClInclude Include="ClothBehavior.h" />
     <ClInclude Include="DebugRenderingSystem.h" />
     <ClInclude Include="Editor.h" />
     <ClInclude Include="EngineTypes.h" />
@@ -208,8 +214,10 @@
     <ClInclude Include="External\Imgui\imstb_textedit.h" />
     <ClInclude Include="External\Imgui\imstb_truetype.h" />
     <ClInclude Include="Input.h" />
+    <ClInclude Include="InverseKinematicsBehavior.h" />
     <ClInclude Include="JsonParser.h" />
     <ClInclude Include="LightComponent.h" />
+    <ClInclude Include="Line.h" />
     <ClInclude Include="LinearAllocator.h" />
     <ClInclude Include="Material.h" />
     <ClInclude Include="Memory.h" />
@@ -248,6 +256,8 @@
     <None Include="..\Resources\Shaders\gBuffer.vert" />
     <None Include="..\Resources\Shaders\gBufferViewer.frag" />
     <None Include="..\Resources\Shaders\gBufferViewer.vert" />
+    <None Include="..\Resources\Shaders\LineDebugDraw.frag" />
+    <None Include="..\Resources\Shaders\LineDebugDraw.vert" />
     <None Include="..\Resources\Shaders\sphereDebugDraw.frag" />
     <None Include="..\Resources\Shaders\sphereDebugDraw.vert" />
     <None Include="..\Resources\Shaders\texture.frag" />
